tests/NormalTests/paczka1/small_fuzzy/81107105.err
Error in line 3: A163 S676 7,9
Error in line 7: EXMf9L50Dw A39 92,4
